<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/dimen_8dp"
    android:paddingRight="@dimen/dimen_8dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <!--<ImageView-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:contentDescription="@string/image"-->
                <!--android:scaleType="fitXY"-->
                <!--android:src="@mipmap/tour" />-->

            <LinearLayout
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY">
                <ListView
                    android:id="@+id/eventList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_24dp"
                    android:paddingRight="@dimen/dimen_24dp"
                    android:paddingTop="@dimen/dimen_8dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/blue"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/layoutButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/travel_event"
                        android:textAppearance="@style/RtlOverlay.Widget.AppCompat.PopupMenuItem"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:layout_marginTop="15dp"
                        android:id="@+id/tvTravelEvent" />

                    <EditText
                        android:id="@+id/etEventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/destination"
                        android:layout_marginTop="15dp">
                        <requestFocus/>
                    </EditText>

                    <EditText
                        android:id="@+id/etEstBudget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/EstBudget"
                        android:layout_marginTop="15dp"/>
                    <EditText
                        android:id="@+id/etStartDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/startDate"
                        android:layout_marginTop="15dp"/>
                    <EditText
                        android:id="@+id/etEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/endDate"
                        android:layout_marginTop="15dp"/>
                    <Button
                        android:id="@+id/btEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/event"
                        android:textColor="#fff"
                        android:onClick="createEvent"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                </LinearLayout>

            </LinearLayout>
            <ImageButton
                android:id="@+id/launchEvent"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_alignBottom="@id/imageView"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="28dp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_button"
                android:onClick="launchEvent"
                android:src="@mipmap/ic_plus" />

    </RelativeLayout>

</LinearLayout>

